# fastapi-project-structure-django-passive-style

./: .env.example  .gitignore  AUDIT_LEDGER.md  AUDIT_REPORT.md  EAGER_LOADING_DESIGN.html  LICENSE  README.md  config.py  pyproject.toml
app/celery/: task.py
app/core/db/: __init__.py  router.py  session.py
app/core/middlewares/: user_info_middleware.py
app/core/models/: models_base.py
app/core/repositories/: repository_base.py
app/domains/blog/: admin.py
app/domains/blog/api/routers/v1/: blog.py
app/domains/home/: admin.py
app/domains/home/api/routers/v1/: home.py
app/domains/reply/: admin.py
app/domains/reply/api/routers/v1/: reply.py
app/domains/sns/: admin.py
app/domains/sns/api/routers/v1/: sns.py
app/domains/user/: admin.py
app/domains/user/api/routers/v1/: user.py
app/shared/pagination/: pagination.py
app/utils/logs/: __init__.py  config.py  filters.py  formatters.py  mixin.py  setup.py
migrations/: env.py
tests/core/: test_admin_views.py  test_admin_wiring.py  test_db_router.py  test_db_router_env.py  test_settings_contract.py
