[project]
name = "fastapi-project-structure-django-passive-style"
version = "0.1.0"
description = "FastAPI project structure with Django-style INSTALLED_APPS registration"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "orjson (>=3.10.0,<4.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "scalar-fastapi (>=1.0.0,<2.0.0)",
    "sqladmin (>=0.20.0,<1.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "python-json-logger (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "tzdata>=2026.2",
    "celery[redis]>=5.4,<6.0",
    "pymysql>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-env>=1.1.0",
    "httpx>=0.28.0,<0.29.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "ruff>=0.8.0,<0.9.0",
    "mypy>=1.14.0,<2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# uv 설정
# =============================================================================
# 이 프로젝트는 라이브러리가 아닌 애플리케이션이므로 루트 패키지를 빌드/설치하지
# 않고 의존성만 가상환경에 설치한다 (flat layout, 배포 패키지 없음).
[tool.uv]
package = false


# =============================================================================
# pytest 설정
# =============================================================================
[tool.pytest.ini_options]
# 테스트 파일 경로
testpaths = ["tests", "app"]

# 테스트 파일 패턴
python_files = ["test_*.py", "*_test.py"]

# 테스트 함수 패턴
python_functions = ["test_*"]

# 테스트 클래스 패턴
python_classes = ["Test*"]

# asyncio 모드 설정
asyncio_mode = "auto"

# 기본 실행 옵션
addopts = [
    "-v",                    # verbose 출력
    "-ra",                   # 실패/에러 요약 출력
    "--strict-markers",      # 등록되지 않은 마커 사용 시 에러
    "--tb=short",            # traceback 짧게 출력
]

# 마커 정의
markers = [
    "slow: 느린 테스트 (실행 제외 가능)",
    "integration: 통합 테스트",
    "unit: 단위 테스트",
]

# 환경 변수 설정
env = [
    "DEBUG=true",
    "ENV=test",
]

# 필터 경고
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# =============================================================================
# pytest-cov 커버리지 설정
# =============================================================================
[tool.coverage.run]
# 커버리지 측정 대상
source = ["app"]

# 브랜치 커버리지
branch = true

# 제외 패턴
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
# 커버리지 리포트 제외 패턴
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# 최소 커버리지 요구사항 (%)
# fail_under = 80


# =============================================================================
# Alembic 설정 (alembic.ini와 함께 사용)
# =============================================================================
# Note: Alembic의 주요 설정은 alembic.ini에서 관리합니다.
# pyproject.toml에서는 관련 스크립트 설정만 정의합니다.

[tool.alembic]
# Alembic 설정 파일 경로 (기본값)
# script_location = "migrations"


# =============================================================================
# Ruff 린터/포맷터 설정
# =============================================================================
[tool.ruff]
# 대상 Python 버전
target-version = "py312"

# 라인 최대 길이
line-length = 100

# 제외 경로
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "*.pyc",
]

[tool.ruff.lint]
# 활성화할 규칙
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

# 무시할 규칙
ignore = [
    "E501",   # line too long (ruff format이 처리)
    "B008",   # function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
# import 정렬 설정
known-first-party = ["app", "config"]


# =============================================================================
# MyPy 타입 체커 설정
# =============================================================================
[tool.mypy]
# Python 버전
python_version = "3.12"

# 엄격 모드
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

# 제외 경로
exclude = [
    "migrations/",
    "tests/",
]

# 모듈별 설정
[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "user_agents.*",
    "aiomysql.*",
    "scalar_fastapi.*",
    "sqladmin.*",
    "celery.*",
]
ignore_missing_imports = true
